@@ -1,0 +1,42 @@
+/*
+ * Copyright 2015 Proofpoint, Inc.
+ *
+ * Licensed under the Apache License, Version 2.0 (the "License");
+ * you may not use this file except in compliance with the License.
+ * You may obtain a copy of the License at
+ *
+ *     http://www.apache.org/licenses/LICENSE-2.0
+ *
+ * Unless required by applicable law or agreed to in writing, software
+ * distributed under the License is distributed on an "AS IS" BASIS,
+ * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+ * See the License for the specific language governing permissions and
+ * limitations under the License.
+ */
+package com.proofpoint.http.client;
+
+import java.io.OutputStream;
+import java.util.concurrent.atomic.AtomicBoolean;
+
+import static com.google.common.base.Preconditions.checkState;
+
+public abstract class SingleUseBodyGenerator
+    implements BodyGenerator
+{
+    private final AtomicBoolean used = new AtomicBoolean(false);
+
+    protected abstract void writeOnce(OutputStream out);
+
+    @Override
+    public final void write(OutputStream out)
+    {
+        checkState(!used.get(), "SingleUseBodyGenerator used twice");
+        used.set(true);
+        writeOnce(out);
+    }
+
+    public boolean isUsed()
+    {
+        return used.get();
+    }
+}
